--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-# -*- coding: utf-8 -*-
-"""
-Created on Sun Nov 12 12:49:45 2023
-
-@author: i.firkovich
-"""
+pandas==1.3.0
+streamlit==1.11.0
+plotly==5.11.0
+altair<5 
 
